--- a/index.html
+++ b/index.html
@@ -71,5 +71,13 @@
     <a>Click here to go to amazon.in</a></p>
     </div>
   </div>
+
+  <div class=" box">
+    <div class="box-content">
+     <h2>Clothes</h2>
+     <div class="box-image" style="background-image:url('box1_image.jpg') ;"></div>
+     <p>See more</p>
+    </div>
+ </div>
 </body>
 </html>
