--- a/index.html
+++ b/index.html
@@ -79,5 +79,20 @@
      <p>See more</p>
     </div>
  </div>
+ <div class=" box"> <div class="box-content">
+    <h2>Health & Peronal Care</h2>
+    <div class="box-image" style="background-image:url('box2_image.jpg') ;"></div>
+    <p>See more</p>
+   </div></div>
+<div class=" box"> <div class="box-content">
+    <h2>Furniture</h2>
+    <div class="box-image" style="background-image:url('box3_image.jpg') ;"></div>
+    <p>See more</p>
+   </div></div>
+<div class=" box"> <div class="box-content">
+    <h2>Electronics</h2>
+    <div class="box-image" style="background-image:url('box4_image.jpg') ;"></div>
+    <p>See more</p>
+   </div>
 </body>
 </html>
