--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </div>
   </div>
 
+  <div class="shop-section">
   <div class=" box">
     <div class="box-content">
      <h2>Clothes</h2>
@@ -94,5 +95,30 @@
     <div class="box-image" style="background-image:url('box4_image.jpg') ;"></div>
     <p>See more</p>
    </div>
+</div>
+<div class="box">
+    <div class="box-content">
+     <h2>Beauty picks</h2>
+     <div class="box-image" style="background-image:url('box5_image.jpg') ;"></div>
+     <p>See more</p>
+    </div>
+ </div>
+ <div class=" box"> <div class="box-content">
+     <h2>Pet Care</h2>
+     <div class="box-image" style="background-image:url('box6_image.jpg') ;"></div>
+     <p>See more</p>
+    </div></div>
+ <div class=" box"> <div class="box-content">
+     <h2>New arrival in Toys</h2>
+     <div class="box-image" style="background-image:url('box7_image.jpg') ;"></div>
+     <p>See more</p>
+    </div></div>
+ <div class=" box"> <div class="box-content">
+     <h2>Discover fashion Trend</h2>
+     <div class="box-image" style="background-image:url('box8_image.jpg') ;"></div>
+     <p>See more</p>
+    </div>
+ </div>
+</div>
 </body>
 </html>
